<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">OpenRTiST</string>
    <string name="title_activity_main" translatable="false">OpenRTiST</string>
    <string name="subtitle" translatable="false">Real-Time Style Transfer</string>

    <!-- activity_serverlist.xml -->
    <string name="options_heading">Options</string>
    <string name="stereo_option">Stereoscopic Effect (requires HUD)</string>
    <string name="reference_option">Show Style Reference Image</string>
    <string name="pref_title_recording">Show Screenshot/Recording Buttons</string>
    <string name="show_fps">Display Metrics (FPS and Average RTT)</string>
    <string name="camera_option">Show Camera Toggling Button</string>
    <string name="autoiterate_option">Iterate Styles Periodically</string>
    <string name="serverlist_heading">Server List</string>
    <string name="name_subheading">Name</string>
    <string name="address_subheading">Address</string>
    <string name="name_hint">Server Name</string>
    <string name="address_hint" translatable="false">192.168.0.1</string>
    <string name="error_empty">Name and address are required.</string>
    <string name="error_invalidURI">Server address is an invalid URI.</string>
    <string name="error_exists">A server by that name already exists.</string>
    <string name="server_removed">Removed server: </string>
    <string name="server_kept">Server retained.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="server_delete_prompt">Are you sure you wish to delete this server?</string>
    <string name="server_delete_title">Remove %s?</string>
    <string name="server_add_hovertext">Add Server</string>
    <string name="interval_set_toast">Interval set to %d seconds.</string>
    <string name="interval_label">Delay (sec)</string>
    <string name="recording_complete">Video snippet saved to %s!</string>
    <string name="screenshot_taken">Screenshot saved to %s!</string>
    <string name="iteration_delayed">Iteration of styles will begin once recording is started.</string>

    <string name="connecting_toast">Connecting to Gabriel server&#8230;</string>
    <string name="connection_error">Connection Error</string>
    <string name="could_not_connect">Could not connect</string>
    <string name="server_disconnected">Server Disconnected</string>
    <string name="back_button">Go Back</string>
    <string name="demo_server">cmu-demo-server</string>
    <string name="demo_dns">openrtist-demo.cmusatyalab.org</string>
    <string name="local_execution">local</string>
    <string name="local_execution_dns_placeholder">Run on Mobile Device</string>

    <string name="about_menu">About&#8230;</string>
    <string name="settings_menu">Settings&#8230;</string>
    <string name="tokenSize">Gabriel Token Size</string>
    <string name="about_title" translatable="false">OpenRTiST: Real-Time Style Transfer</string>
    <string name="about_message" translatable="false">Copyright &#169; 2017-2019\nCarnegie Mellon University\nThis is a developing project.\n\nAll source code and documentation are under the Apache License, Version 2.0 (http://www.apache.org/licenses/LICENSE-2.0.html)</string>


    <!-- Glass Launch-related strings. -->
    <string name="start_gabriel_voice_trigger" translatable="false">Gabriel Assistant</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_token_limit">Gabriel Token Limit</string>
    <string-array name="pref_token_list_titles">
        <item>No limit</item>
        <item>1 frame</item>
        <item>2 frames</item>
        <item>3 frames</item>
        <item>4 frames</item>
        <item>5 frames</item>
    </string-array>
    <string-array name="pref_token_list_values">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="pref_header_experimental">Experimental</string>

    <string name="pref_title_resolution">Image Resolution</string>
    <string-array name="pref_resolution_titles">
        <item>320x240 px</item>
        <item>640x480 px</item>
        <item>1280x720 px</item>
    </string-array>
    <string-array name="pref_resolution_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_iterate_interval">Iterate Styles Periodically</string>
    <string-array name="pref_interval_list_titles">
        <item>No iteration</item>
        <item>5 sec delay</item>
        <item>15 sec delay</item>
        <item>30 sec delay</item>
        <item>60 sec delay</item>
    </string-array>
    <string-array name="pref_interval_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>