<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="general_recording"
        android:title="@string/pref_title_recording" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="general_show_fps"
        android:title="@string/show_fps" />

    <SwitchPreference
        android:key="general_front_camera"
        android:defaultValue="false"
        android:title="@string/camera_option" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="general_stereoscopic"
        android:title="@string/stereo_option" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="general_show_reference"
        android:title="@string/reference_option" />

    <ListPreference
        android:entries="@array/pref_interval_list_titles"
        android:entryValues="@array/pref_interval_list_values"
        android:defaultValue="0"
        android:key="general_iterate_delay"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_iterate_interval" />


</PreferenceScreen>
